--- a/Zdroje.html
+++ b/Zdroje.html
@@ -17,7 +17,15 @@
     </nav>
     
     <div class="Telo">
-        <h1 class="MainHeading">Bouldering</h1>
+        <h1 class="MainHeading">Zopár nesúvyslých videí k téme</h1>
+
+        <div class="ContentSection MediaS">
+            <h2>Pocity priemerného lezca</h2>
+            <p class="TextUvod TextMediaP">
+                Krátka videokompilácia v ktorej český lezec Adam Ondra  dáva na javo svoje pocity doplnené metalovou hudbou. 
+            </p>
+            <iframe class="VMedP" src="https://www.youtube.com/embed/EpskLM6jJnI?si=hdVbnBrtGWM4Dhhx" title="Pár základných lezeckých rád"  allow="fullscreen" ></iframe>
+        </div>
         
         <div class="ContentSection MediaS">
             <h2>Vid1</h2>
