--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="MainNav" id="MainNavi">
         <a href="Zak.Inf.html" class="NavTl1">Základné Informácie</a>
-        <a href="Zdroje.html" class="NavTl">Ukážky Zdrojov</a>
+        <a href="Zdroje.html" class="NavTl">Videá k téme</a>
         <a href="Ludia.html" class="NavTl">Zaujímavé Osobnosti</a>
         <a href="Gym.html" class="NavTl">Info o mojom gyme</a>
         <a href="Kontakt.html" class="NavTl">Kontakty</a>
