--- a/Ludia.html
+++ b/Ludia.html
@@ -11,7 +11,7 @@
     <nav  class="MainNav">
         <a  href="index.html" class="NavTl1">Úvodná stránka</a>
         <a  href="Zak.Inf.html" class="NavTl">Základné Informácie</a>
-        <a  href="Zdroje.html" class="NavTl">Ukážky Zdrojov</a>
+        <a  href="Zdroje.html" class="NavTl">Videá k téme</a>
         <a  href="Gym.html" class="NavTl">Info o mojom gyme</a>
         <a  href="Kontakt.html" class="NavTl">Kontakty</a>
     </nav>
