--- a/Zdroje.html
+++ b/Zdroje.html
@@ -17,27 +17,28 @@
     </nav>
     
     <div class="Telo">
-        <h1 class="MainHeading">Zopár nesúvyslých videí k téme</h1>
+        <h1 class="MainHeading">Zopár nesúvislých videí k téme</h1>
 
         <div class="ContentSection MediaS">
             <h2>Pocity priemerného lezca</h2>
             <p class="TextUvod TextMediaP">
-                Krátka videokompilácia v ktorej český lezec Adam Ondra  dáva na javo svoje pocity doplnené metalovou hudbou. 
+                Na úvod krátka videokompilácia v ktorej český lezec Adam Ondra  dáva na javo svoje pocity doplnené metalovou hudbou. 
             </p>
             <iframe class="VMedP" src="https://www.youtube.com/embed/EpskLM6jJnI?si=hdVbnBrtGWM4Dhhx" title="Pár základných lezeckých rád"  allow="fullscreen" ></iframe>
         </div>
         
         <div class="ContentSection MediaS">
-            <h2>Vid1</h2>
+            <h2>Video o základoch lezenia</h2>
             <p class="TextUvod TextMediaN">
-                Video o základných pohyboch a princípoch pri lezení
+                Video o základných pohyboch, princípoch a technikách pri lezení
             </p>
             <iframe class="VMedN" src="https://www.youtube.com/embed/S-4XZgARAuA?si=WW683BY3rtTtfGFg" title="Pár základných lezeckých rád"  allow="fullscreen" ></iframe>
         </div>
+
         <div class="ContentSection MediaS">
-            <h2>Vid2</h2>
+            <h2>Popis lezeckých športov</h2>
             <p class="TextUvod TextMediaP">
-                Zábavné video pre všetky poddruhy lezenia
+                Zábavné video zobrazujúce a opisujúce mnohé poddruhy lezenia.
             </p>
             <iframe class="VMedP" src="https://www.youtube.com/embed/VtIyrJCfhk4?si=1hlX-s1teaaJeTBC" title="Zábavne poňaté videjko o lezení všehodruhu" allow="fullscreen"></iframe>
         </div>
