Vsetci lezci pridany, zemeny Gym na discipliny

--- a/Discip.html
+++ b/Discip.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Podstránka gym-u</title>
+    <title>Lezecké disciplíny</title>
     <link rel="stylesheet" href="styl.css">
 </head>
 
