--- a/Ludia.html
+++ b/Ludia.html
@@ -12,10 +12,86 @@
         <a  href="index.html" class="NavTl1">Úvodná stránka</a>
         <a  href="Zak.Inf.html" class="NavTl">Základné Informácie</a>
         <a  href="Zdroje.html" class="NavTl">Videá k téme</a>
-        <a  href="Gym.html" class="NavTl">Info o mojom gyme</a>
+        <a  href="Discip.html" class="NavTl">Disciplíny v skratke</a>
         <a  href="Kontakt.html" class="NavTl">Kontakty</a>
     </nav>
-    
 
+    <div class="Telo">
+        <h1 class="MainHeading">Niekoľko známych osobností športu</h1>
+
+        <div class="ContentSection People"> 
+            <h3 id="1">Adam Ondra</h3>
+            <div class="MediaGrid">
+                <div class="TextMediaP">
+                    <p class="TextUvod">
+                        Najznámejší Český lezec, za svoju doterajšiu kariéru nazbieral na majstrovstvách sveta v lezeckej disciplíne bouldering 15
+                        medailí, z toho 6 zlatých a 6 strieborných. Naposledy sa majstrovstiev sveta zúčastnil v roku 2023. Taktiež je známy
+                        vďaka svojmu výkonu na lezeckej ceste Silence, hodnotenú ako 9c, ktorú ako prvý človek na svete vyliezol svojpomocne. Fotka
+                        pochádza práve z tejto cesty.
+                    </p>
+                </div>
+                <a style="grid-area: MediaP ; justify-self: center;" href="https://upload.wikimedia.org/wikipedia/commons/1/12/Adam_Ondra_climbing_Silence%2C_9c_by_PAVEL_BLAZEK_1-cropped.jpg" target="_self">
+                    <img  class="Med" src="https://upload.wikimedia.org/wikipedia/commons/1/12/Adam_Ondra_climbing_Silence%2C_9c_by_PAVEL_BLAZEK_1-cropped.jpg" alt="Adam Ondra climbing The Silence">
+                </a>
+            </div>
+        </div>
+        
+        <div class="ContentSection People"> 
+            <h3 id="2">Janja Garnbret</h3>
+            <div class="MediaGrid">
+                <div class="TextMediaN">
+                    <p class="TextUvod">
+                        Jedna z najznámejšia Slovisnká lezkyňa, doposiaľ získala na majstrovstvách sveta v disciplíne bouldering 23 medailí, z čoho 18 bolo zlatých a 5 strieborných.
+                        Naposledy sa zúčastnila v roku 2025 kedy získala zlato. Takisto veľmi uspešná aj v iných lezeckých disciplínach kde získala dokopy 46 medailí, z toho 31 zlatých.
+                    </p>
+                </div>
+                <a style="grid-area: MediaN ; justify-self: center;" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Janja_Garnbret_2017_%28cropped%29.jpg/1024px-Janja_Garnbret_2017_%28cropped%29.jpg" target="_self">
+                    <img  class="Med" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Janja_Garnbret_2017_%28cropped%29.jpg/1024px-Janja_Garnbret_2017_%28cropped%29.jpg" alt="Janja Garnbret">
+                </a>
+            </div>
+        </div>
+
+        <div class="ContentSection People"> 
+            <h3 id="3">Jakob Schubert</h3>
+            <div class="MediaGrid">
+                <div class="TextMediaP">
+                    <p class="TextUvod">
+                        Najznámejší Český lezec, za svoju doterajšiu kariéru nazbieral na mastrovstvách sveta v lezeckej disciplíne bouldering 15
+                        medailí, z toho 6 zlatých a 6 strieborných. Naposledy sa majstrovstiev sveta zúčastnil v roku 2023. Taktiež je známy
+                        vďaka svojmu výkonu na lezeckej ceste Silence, hodnotenú ako 9c, ktorú ako prvý človek na svete vyliezol svojpomocne. Fotka
+                        pochádza práve z tejto cesty.
+                    </p>
+                </div>
+                <a style="grid-area: MediaP ; justify-self: center;" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Jakob_Schubert_Climbing_WCh_2018.jpg/800px-Jakob_Schubert_Climbing_WCh_2018.jpg" target="_self">
+                    <img  class="Med" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Jakob_Schubert_Climbing_WCh_2018.jpg/800px-Jakob_Schubert_Climbing_WCh_2018.jpg" alt="Jakob Schubert">
+                </a>
+            </div>
+        </div>
+
+        <div class="ContentSection People"> 
+            <h3 id="4">Magnus Midtbø</h3>
+            <div class="MediaGrid">
+                <div class="TextMediaN">
+                    <p class="TextUvod">
+                        Azda najznámejší lezecký influencer, každému kto sa zaujíma o lezenie minimálne raz odporučilo jeho videá. 
+                        Svoju profesionálnu kariéru ukončil v roku 2017 počas svojej kariéry dosiahol značne menej úspechov ako predošlí lezci 
+                        avšak v širokej verejnosti je známejší keďže aktívne pôsobí ako video bloger a dokumentuje svoje skúsenosti z rôznych športových aktivít.
+                    </p>
+                </div>
+                <a style="grid-area: MediaN ; justify-self: center;" href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Magnus_Midtb%C3%B8_Innsbruck_2010.JPG/1024px-Magnus_Midtb%C3%B8_Innsbruck_2010.JPG" target="_self">
+                    <img  class="Med" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Magnus_Midtb%C3%B8_Innsbruck_2010.JPG/1024px-Magnus_Midtb%C3%B8_Innsbruck_2010.JPG" alt="Magnus Midtbø">
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+
+    <footer class="Pata">
+        <a href="#MainNavi"><img class="Icon" src="img/top.png" alt="Ikona návratu hore"></a>
+        <a href="https://www.instagram.com/pralez_nitra/" target="_blank"><img class="Icon" src="img/IG.png" alt="Ikona prekliku na instagram"></a>
+        <a href="https://www.facebook.com/majlstoun" target="_blank"><img class="Icon" src="img/FB.png" alt="Ikona prekliku na facebook"></a>
+        <a href="mailto:himynickisgamo@gmail.com"><img class="Icon" src="img/Mail.png" alt="Ikona na odoslanie mailu"></a>
+    </footer>
 </body>
 </html>
