--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="Zak.Inf.html" class="NavTl1">Základné Informácie</a>
         <a href="Zdroje.html" class="NavTl">Videá k téme</a>
         <a href="Ludia.html" class="NavTl">Zaujímavé Osobnosti</a>
-        <a href="Gym.html" class="NavTl">Info o mojom gyme</a>
+        <a href="Discip.html" class="NavTl">Disciplíny v skratke</a>
         <a href="Kontakt.html" class="NavTl">Kontakty</a>
     </nav>
     
