--- a/Kontakt.html
+++ b/Kontakt.html
@@ -13,7 +13,7 @@
         <a  href="Zak.Inf.html" class="NavTl">Základné Informácie</a>
         <a  href="Zdroje.html" class="NavTl">Videá k téme</a>
         <a  href="Ludia.html" class="NavTl">Zaujímavé Osobnosti</a>
-        <a  href="Gym.html" class="NavTl">Info o mojom gyme</a>
+        <a  href="Discip.html" class="NavTl">Disciplíny v skratke</a>
     </nav>
 
     <div class="Telo">
