dorobeny list u ludi

--- a/Ludia.html
+++ b/Ludia.html
@@ -19,6 +19,16 @@
     <div class="Telo">
         <h1 class="MainHeading">Niekoľko známych osobností športu</h1>
 
+        <div class="ContentSection">
+            <h2>Obsah</h2>
+            <ol class="TextUvod Bold">
+                <li><a href="#1">Adam Ondra</a></li>
+                <li><a href="#2">Janja Garnbret</a></li>
+                <li><a href="#3">Jakob Schubert</a></li>
+                <li><a href="#4">Magnus Midtbø</a></li>
+            </ol>
+        </div>
+
         <div class="ContentSection People"> 
             <h3 id="1">Adam Ondra</h3>
             <div class="MediaGrid">
