uprava hlavicky, dokonecnie kont. formulara

--- a/Ludia.html
+++ b/Ludia.html
@@ -10,10 +10,11 @@
 <body>
     <nav  class="MainNav">
         <a  href="index.html" class="NavTl1">Úvodná stránka</a>
-        <a  href="Zak.Inf.html" class="NavTl">Základné Informácie</a>
-        <a  href="Zdroje.html" class="NavTl">Videá k téme</a>
-        <a  href="Discip.html" class="NavTl">Disciplíny v skratke</a>
-        <a  href="Kontakt.html" class="NavTl">Kontakty</a>
+        <a href="Zak.Inf.html" class="NavTl1">Základné Informácie</a>
+        <a href="Zdroje.html" class="NavTl">Videá k téme</a>
+        <a href="Ludia.html" class="NavTl">Zaujímavé Osobnosti</a>
+        <a href="Discip.html" class="NavTl">Disciplíny v skratke</a>
+        <a href="Kontakt.html" class="NavTl">Kontakty</a>
     </nav>
 
     <div class="Telo">
