--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <nav class="MainNav" id="MainNavi">
+        <a  href="index.html" class="NavTl1">Úvodná stránka</a>
         <a href="Zak.Inf.html" class="NavTl1">Základné Informácie</a>
         <a href="Zdroje.html" class="NavTl">Videá k téme</a>
         <a href="Ludia.html" class="NavTl">Zaujímavé Osobnosti</a>
