--- a/Ludia.html
+++ b/Ludia.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav  class="MainNav">
+    <nav  class="MainNav" id="MainNavi">
         <a  href="index.html" class="NavTl1">Úvodná stránka</a>
         <a href="Zak.Inf.html" class="NavTl1">Základné Informácie</a>
         <a href="Zdroje.html" class="NavTl">Videá k téme</a>
