--- a/Zak.Inf.html
+++ b/Zak.Inf.html
@@ -18,7 +18,7 @@
     </nav>
     
     <div class="Telo">
-        <h1 class="MainHeading">Čo treba na začiatok?</h1>
+        <h1 class="MainHeading">Informácie na začiatok</h1>
         
         <div class="ContentSection">
             <h2>Vybavenie</h2>
