--- a/Zak.Inf.html
+++ b/Zak.Inf.html
@@ -105,7 +105,7 @@
             <h2>Obtiažnosť cesty a úroveň lezca</h2>
 
             <p class="TextUvod">
-                PNapriek tomu že náročnosť ciest je veľmi subjektívna vec mnohé telocvične poskytujú z istej miery vlastnú tabuľku klasifikácie bouldrov ich obtiažností. 
+                Napriek tomu že náročnosť ciest je veľmi subjektívna vec mnohé telocvične poskytujú z istej miery vlastnú tabuľku klasifikácie bouldrov ich obtiažností. 
                 Nižšie je uvedená takáto tabuľka pre Pralez v Nitre.
             </p>
 
@@ -118,27 +118,27 @@
 
                 <tr>
                     <td>Začiatočnícke bouldre</td>
-                    <td>5A,5B</td>
+                    <td>5A, 5B</td>
                 </tr>
 
                 <tr>
                     <td>Ľahké bouldre</td>
-                    <td>5C,6A</td>
+                    <td>5C, 6A</td>
                 </tr>
 
                 <tr>
                     <td>Stredne ťažké bouldre</td>
-                    <td>6B,6C</td>
+                    <td>6B, 6C</td>
                 </tr>
 
                 <tr>
                     <td>Ťažké bouldre</td>
-                    <td>7A,7B</td>
+                    <td>7A, 7B</td>
                 </tr>
 
                 <tr>
                     <td>Super ťažké bouldre</td>
-                    <td>7C,8A+</td>
+                    <td>7C, 8A+</td>
                 </tr>
             </table>
         </div>
