--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="MainNav" id="MainNavi">
         <a  href="index.html" class="NavTl1">Úvodná stránka</a>
-        <a href="Zak.Inf.html" class="NavTl1">Základné Informácie</a>
+        <a href="Zak.Inf.html" class="NavTl1">Základné informácie</a>
         <a href="Zdroje.html" class="NavTl">Videá k téme</a>
-        <a href="Ludia.html" class="NavTl">Zaujímavé Osobnosti</a>
+        <a href="Ludia.html" class="NavTl">Zaujímavé osobnosti</a>
         <a href="Discip.html" class="NavTl">Disciplíny v skratke</a>
         <a href="Kontakt.html" class="NavTl">Kontakty</a>
     </nav>
