--- a/Ludia.html
+++ b/Ludia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informácie</title>
+    <link rel="icon" type="icon" href="img/Favicon.svg">
     <link rel="stylesheet" href="styl.css">
 </head>
 
