--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <nav class="MainNav" id="MainNavi">
-        <a  href="index.html" class="NavTl1">Úvodná stránka</a>
-        <a href="Zak.Inf.html" class="NavTl1">Základné informácie</a>
+        <a href="index.html" class="NavTl1">Úvodná stránka</a>
+        <a href="Zak.Inf.html" class="NavTl1" >Základné informácie</a>
         <a href="Zdroje.html" class="NavTl">Videá k téme</a>
         <a href="Ludia.html" class="NavTl">Zaujímavé osobnosti</a>
         <a href="Discip.html" class="NavTl">Disciplíny v skratke</a>
@@ -68,5 +68,7 @@
         <a href="https://www.facebook.com/majlstoun" target="_blank"><img class="Icon" src="img/FB.png" alt="Ikona prekliku na facebook"></a>
         <a href="mailto:himynickisgamo@gmail.com"><img class="Icon" src="img/Mail.png" alt="Ikona na odoslanie mailu"></a>
     </footer>
+
+    <script src="myjscript.js"></script>
 </body>
 </html>
